Update AmicusDocs and notary service

--- a/amicusairports-landing.html
+++ b/amicusairports-landing.html
@@ -192,11 +192,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-9 text-center">
-                    <span class="subheading">Connected Carbon Intelligence</span>
-                    <h3 class="mb-3">Airport Passenger Journey Insights</h3>
-                    <p class="text-muted mb-0">We provide internet-enabled carbon intelligence for airport passenger journeys, designed to plug directly into existing airport connectivity infrastructure.</p>
+                    <span class="subheading text-white">Connected Carbon Intelligence</span>
+                    <h3 class="mb-3 text-white">Airport Passenger Journey Insights</h3>
+                    <p class="mb-0 text-white">We provide carbon intelligence for airport passenger journeys that connects directly with existing airport networks.</p>
                     <div class="mt-3">
-                        <a class="icon-link" href="amicusc02-landing.html" aria-label="Open Connected Carbon Intelligence landing page">
+                        <a class="icon-link" href="amicuscarbon-landing.html" aria-label="Open Connected Carbon Intelligence landing page">
                             <span class="icon-circle"><span class="ion-ios-analytics"></span></span>
                             <span>Explore Carbon Intelligence</span>
                         </a>
