--- a/amicuscarbon-landing.html
+++ b/amicuscarbon-landing.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <span class="pill">Airport-ready insights</span>
-                    <h1 class="mb-3">Internet-Enabled Carbon Intelligence</h1>
+                    <h1 class="mb-3 text-white">Internet-Enabled Carbon Intelligence</h1>
                     <p class="lead">Measure, visualize, and act on airport passenger journey emissions in real time—designed to integrate with existing airport connectivity infrastructure.</p>
                     <a href="amicustransport-landing.html" class="btn btn-primary px-4 py-3">Back to Airport Transport</a>
                 </div>
