--- a/amicusnotary-landing.html
+++ b/amicusnotary-landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmicusNotary - Travel Document Notarization</title>
+    <title>AmicusDocs - Travel Document Services</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -66,18 +66,18 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <div class="heading-section mb-5 text-center">
-                        <h2 class="mb-3">AmicusNotary</h2>
-                        <p class="subheading">Travel Document Notarization Services</p>
+                        <h2 class="mb-3">AmicusDocs</h2>
+                        <p class="subheading">Travel Document Services</p>
                     </div>
 
                     <div class="ftco-services-2">
                         <div class="services mb-4">
-                            <h3 class="heading mb-3 text-center">Professional Travel Document Notarization</h3>
-                            <p>Need your travel documents notarized? AmicusNotary provides quick, reliable notarization services specifically designed for travelers. A notary will verify and authenticate your travel documents for international trips, visa applications, passport renewals, and more.</p>
+                            <h3 class="heading mb-3 text-center">Professional Support with Travel Documents</h3>
+                            <p>Need your travel documents notarized? AmicusDocs provides quick, reliable notarization services specifically designed for travelers. We provide support with travel documents for international trips, visa applications, passport renewals, and more.</p>
                         </div>
 
                         <div class="services mb-4 text-center">
-                            <h4 class="heading mb-2">What We Notarize:</h4>
+                            <h4 class="heading mb-2">Document Services Include:</h4>
                             <ul class="list-unstyled">
                                 <li class="mb-2">✓ Passport applications and renewals</li>
                                 <li class="mb-2">✓ Visa support documents</li>
@@ -89,7 +89,7 @@
                         </div>
 
                         <div class="services mb-4 text-center">
-                            <h4 class="heading mb-2">Why Choose AmicusNotary?</h4>
+                            <h4 class="heading mb-2">Why Choose AmicusDocs?</h4>
                             <ul class="list-unstyled">
                                 <li class="mb-2">✓ Fast turnaround times</li>
                                 <li class="mb-2">✓ NNA certified Notary</li>
@@ -100,8 +100,8 @@
                         </div>
 
                         <div class="text-center mt-5">
-                            <p class="mb-4">Ready to get your travel documents notarized?</p>
-                            <a href="notaryservice.html" class="btn btn-primary btn-lg">Book Your Notarization</a>
+                            <p class="mb-4">AmicusDocs can help with you document needs.</p>
+                            <a href="notaryservice.html" class="btn btn-primary btn-lg">Book Your Service</a>
                             <p class="text-muted mt-3">Or contact us for more information</p>
                         </div>
                     </div>
