Rename AmicusDocs pages and update links

--- a/amicusdocs-landing.html
+++ b/amicusdocs-landing.html
@@ -35,6 +35,11 @@
         .ftco-section {
             margin-top: 180px;
         }
+        .doc-card {
+            background: #ffffff;
+            border: 1px solid #e2e8f0;
+            border-radius: 16px;
+        }
     </style>
 </head>
 <body>
@@ -73,35 +78,40 @@
                     <div class="ftco-services-2">
                         <div class="services mb-4">
                             <h3 class="heading mb-3 text-center">Professional Support with Travel Documents</h3>
-                            <p>Need your travel documents notarized? AmicusDocs provides quick, reliable notarization services specifically designed for travelers. We provide support with travel documents for international trips, visa applications, passport renewals, and more.</p>
+                            <p>AmicusDocs provides quick, reliable document services specifically designed for travelers. We provide support with travel documents for international trips, visa applications, passport renewals, and more.</p>
                         </div>
 
-                        <div class="services mb-4 text-center">
-                            <h4 class="heading mb-2">Document Services Include:</h4>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">✓ Passport applications and renewals</li>
-                                <li class="mb-2">✓ Visa support documents</li>
-                                <li class="mb-2">✓ Travel permissions and affidavits</li>
-                                <li class="mb-2">✓ International travel authorizations</li>
-                                <li class="mb-2">✓ Hotel and booking confirmations</li>
-                                <li class="mb-2">✓ Power of attorney documents for travel</li>
-                            </ul>
-                        </div>
-
-                        <div class="services mb-4 text-center">
-                            <h4 class="heading mb-2">Why Choose AmicusDocs?</h4>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">✓ Fast turnaround times</li>
-                                <li class="mb-2">✓ NNA certified Notary</li>
-                                <li class="mb-2">✓ Online and in-person options available</li>
-                                <li class="mb-2">✓ Affordable rates</li>
-                                <li class="mb-2">✓ Specialized in travel documentation</li>
-                            </ul>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="services mb-4 p-4 card-shadow h-100 doc-card">
+                                    <h4 class="heading mb-2">Document Services Include:</h4>
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2">✓ Passport applications and renewals</li>
+                                        <li class="mb-2">✓ Visa support documents</li>
+                                        <li class="mb-2">✓ Travel permissions and affidavits</li>
+                                        <li class="mb-2">✓ International travel authorizations</li>
+                                        <li class="mb-2">✓ Hotel and booking confirmations</li>
+                                        <li class="mb-2">✓ Power of attorney documents for travel</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="services mb-4 p-4 card-shadow h-100 doc-card">
+                                    <h4 class="heading mb-2">Why Choose AmicusDocs?</h4>
+                                    <ul class="list-unstyled">
+                                        <li class="mb-2">✓ Fast turnaround times</li>
+                                        <li class="mb-2">✓ NNA certified Notary</li>
+                                        <li class="mb-2">✓ Online and in-person options available</li>
+                                        <li class="mb-2">✓ Affordable rates</li>
+                                        <li class="mb-2">✓ Specialized in travel documentation</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="text-center mt-5">
                             <p class="mb-4">AmicusDocs can help with you document needs.</p>
-                            <a href="notaryservice.html" class="btn btn-primary btn-lg">Book Your Service</a>
+                            <a href="docservice.html" class="btn btn-primary btn-lg">Book Your Service</a>
                             <p class="text-muted mt-3">Or contact us for more information</p>
                         </div>
                     </div>
@@ -118,7 +128,7 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#services">Services</a></li>
-                        <li><a href="notaryservice.html">Notary Services</a></li>
+                        <li><a href="docservice.html">Notary Services</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
