--- a/docservice.html
+++ b/docservice.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AmicusNotary - Online Notary</title>
+  <title>AmicusDocs - Online Support</title>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -94,7 +94,7 @@
       <input type="hidden" name="amount" value="50.00">
       <input type="hidden" name="currency_code" value="USD">
       <input type="hidden" name="return" value="https://YOURDOMAIN.com/afterpayment.html">
-      <input type="submit" value="Book Now" class="btn">
+      <input type="submit" value="Send a Message" class="btn">
     </form>
 
     <!-- RON provider iframe -->
