--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 	        </div>
 	        <div class="row">
 	        	<div class="col-md d-flex align-self-stretch ftco-animate">
-	            <a href="amicusnotary-landing.html" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
+	            <a href="amicusdocs-landing.html" class="media block-6 services text-center d-block" style="text-decoration: none; color: inherit;">
 	              <div class="icon justify-content-center align-items-center d-flex"><span class="flaticon-gliding"></span></div>
 	              <div class="media-body">
-	              <h3 class="heading mb-3">AmicusNotary</h3>
-	                <p>Need a travel document notarized? We support notarization services with travel documents.</p>
+	              <h3 class="heading mb-3">AmicusDocs</h3>
+	                <p>Need help with a travel document? We provide comprehensive travel document services.</p>
 	              </div>
 	            </a>      
 	          </div>
@@ -868,7 +868,7 @@
 				<li><a href="amicustransport-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTransport</a></li>
 				<li><a href="amicustravel-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTravel</a></li>
 				<li><a href="amicusc02-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusCarbon</a></li>
-				<li><a href="amicusnotary-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
+				<li><a href="amicusdocs-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
 				<li><a href="amicuscarbon-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusAirport</a></li>
               </ul>
             </div>
