Update branding: Change AmicusNotary to AmicusDocs, update footer to Office Locations, and refine service descriptions

--- a/amicusdocs-landing.html
+++ b/amicusdocs-landing.html
@@ -83,20 +83,19 @@
 
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="services mb-4 p-4 card-shadow h-100 doc-card">
+                                <div class="services mb-4 p-4 card-shadow h-100 doc-card text-center">
                                     <h4 class="heading mb-2">Document Services Include:</h4>
                                     <ul class="list-unstyled">
                                         <li class="mb-2">✓ Passport applications and renewals</li>
                                         <li class="mb-2">✓ Visa support documents</li>
                                         <li class="mb-2">✓ Travel permissions and affidavits</li>
                                         <li class="mb-2">✓ International travel authorizations</li>
-                                        <li class="mb-2">✓ Hotel and booking confirmations</li>
                                         <li class="mb-2">✓ Power of attorney documents for travel</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="services mb-4 p-4 card-shadow h-100 doc-card">
+                                <div class="services mb-4 p-4 card-shadow h-100 doc-card text-center">
                                     <h4 class="heading mb-2">Why Choose AmicusDocs?</h4>
                                     <ul class="list-unstyled">
                                         <li class="mb-2">✓ Fast turnaround times</li>
@@ -110,7 +109,6 @@
                         </div>
 
                         <div class="text-center mt-5">
-                            <p class="mb-4">AmicusDocs can help with you document needs.</p>
                             <a href="docservice.html" class="btn btn-primary btn-lg">Book Your Service</a>
                             <p class="text-muted mt-3">Or contact us for more information</p>
                         </div>
