--- a/amicusservices-landing.html
+++ b/amicusservices-landing.html
@@ -357,9 +357,9 @@
                 <div class="col-lg-6">
                     <div class="service-item">
                         <div class="icon" aria-hidden="true"><span class="ion-ios-document"></span></div>
-                        <h3>AmicusNotary</h3>
-                        <p>Professional notarization services for travel documents. Get your travel documents authenticated quickly and reliably.</p>
-                        <a href="amicusdocs-landing.html" class="btn btn-sm btn-primary mt-3">Learn More about AmicusNotary</a>
+                        <h3>AmicusDocs</h3>
+                        <p>Professional document authentication and legalization services for international travel and business visas.</p>
+                        <a href="amicusdocs-landing.html" class="btn btn-sm btn-primary mt-3">Learn More about AmicusDocs</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -418,7 +418,7 @@
                         <h2 class="ftco-heading-2">Our Services</h2>
                         <ul class="list-unstyled">
                             <li><a href="amicustravel-landing.html">AmicusTravel</a></li>
-                            <li><a href="amicusdocs-landing.html">AmicusNotary</a></li>
+                            <li><a href="amicusdocs-landing.html">AmicusDocs</a></li>
                             <li><a href="amicusc02-landing.html">AmicusC02</a></li>
                             <li><a href="#">AmicusFitness</a></li>
                         </ul>
