Remove underline from AmicuServices link in About section footer

--- a/amicusservices-landing.html
+++ b/amicusservices-landing.html
@@ -398,8 +398,8 @@
             <div class="row mb-5">
                 <div class="col-md-6 col-lg-3">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">About AmicuServices</h2>
-                        <p>Making sustainable travel simple through verified carbon-friendly recommendations and transparent environmental impact reporting.</p>
+                        <h2 class="ftco-heading-2">About <span><a href="index.html" style="color:#e2c0bb;text-decoration:none;">AmicuServices</a></span></h2>
+                        <p>AmicuServices connects travelers and businesses to sustainable stays and practical carbon solutions for a greener future.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
@@ -415,7 +415,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Our Services</h2>
+                        <h2 class="ftco-heading-2">Business Services</h2>
                         <ul class="list-unstyled">
                             <li><a href="amicustravel-landing.html">AmicusTravel</a></li>
                             <li><a href="amicusdocs-landing.html">AmicusDocs</a></li>
@@ -426,7 +426,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Have a Question?</h2>
+                        <h2 class="ftco-heading-2">Office Locations</h2>
                         <div class="block-23 mb-3">
                             <ul class="list-unstyled">
                                 <li><span class="icon icon-map-marker"></span><span class="text">Contact us for more information</span></li>
