--- a/destination-single.html
+++ b/destination-single.html
@@ -371,7 +371,7 @@
                 <li><a href="amicustransport-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTransport</a></li>
                 <li><a href="amicustravel-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTravel</a></li>
                 <li><a href="amicusc02-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusCarbon</a></li>
-                <li><a href="amicusdocs-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
+                <li><a href="amicusdocs-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusDocs</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Camping</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Party</a></li>
               </ul>
