--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-5">
 	          <div class="col-md-12 heading-section text-center ftco-animate">
-	          	<span class="subheading">Sustainable &amp; Fun</span>
+	          	<span class="subheading">Business Services</span>
 	            <h2 class="mb-4">Our Services</h2>
 	            <p>AmicuServices makes sustainable travel simple. We help hotels track and shrink their carbon footprint, while giving travelers 
 		easy tools to discover and book eco-friendly, LEED-certified, and sustainability-verified stays. Smarter choices, greener journeys.</p>
@@ -839,8 +839,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About <span><a href="index.html">AmicuServices</a></span></h2>
-              <p>We help travelers find environmentally responsible hotels while giving hosts simple tools to measure and improve their carbon footprint — all through clear data, practical insights, and transparent reporting.</p>
+              <h2 class="ftco-heading-2">About <span><a href="index.html" style="color:#e2c0bb;text-decoration:underline;">AmicuServices</a></span></h2>
+              <p>AmicuServices connects travelers and businesses to sustainable stays and practical carbon solutions for a greener future.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -868,7 +868,7 @@
 				<li><a href="amicustransport-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTransport</a></li>
 				<li><a href="amicustravel-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusTravel</a></li>
 				<li><a href="amicusc02-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusCarbon</a></li>
-				<li><a href="amicusdocs-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusNotary</a></li>
+				<li><a href="amicusdocs-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusDocs</a></li>
 				<li><a href="amicuscarbon-landing.html"><span class="icon-long-arrow-right mr-2"></span>AmicusAirport</a></li>
               </ul>
             </div>
