--- a/amicusairports-landing.html
+++ b/amicusairports-landing.html
@@ -206,6 +206,18 @@
         </div>
     </section>
 
+    <section class="ftco-section bg-white" id="connectivity">
+        <div class="container">
+            <div class="row justify-content-center mb-4">
+                <div class="col-lg-9 text-center">
+                    <span class="subheading">Connectivity Features</span>
+                    <h2 class="mb-3">Bluetooth & Hotspot Compatibility</h2>
+                    <p>Our platform is designed to support Bluetooth and Wi-Fi hotspot connectivity for seamless device integration and enhanced passenger experiences at the airport. Stay tuned for future updates and compatibility guides.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="ftco-section bg-light">
         <div class="container">
             <div class="row justify-content-center mb-4">
