--- a/amicusc02-landing.html
+++ b/amicusc02-landing.html
@@ -84,7 +84,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="services mb-4">
-                                    <h4 class="heading mb-2">Our Services Include:</h4>
+                                    <h4 class="heading mb-2">Business Services Include:</h4>
                                     <ul class="list-unstyled">
                                         <li class="mb-2">✓ Comprehensive LCA analysis</li>
                                         <li class="mb-2">✓ Scope 1, 2, and 3 emissions tracking</li>
