Update About section footer to AmicuServices with pink color and no underline across all base pages

--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">About <span><a href="index.html" style="color:#e2c0bb;text-decoration:underline;">AmicuServices</a></span></h2>
+			  <h2 class="ftco-heading-2">About <span><a href="index.html" style="color:#e2c0bb;text-decoration:none;">AmicuServices</a></span></h2>
               <p>AmicuServices connects travelers and businesses to sustainable stays and practical carbon solutions for a greener future.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
