--- a/destination-single.html
+++ b/destination-single.html
@@ -343,7 +343,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About <span><a href="index.html" style="color:#e2c0bb;text-decoration:none;">AmicuServices</a></span></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>AmicuServices connects travelers and businesses to sustainable stays and practical carbon solutions for a greener future.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
