Remove Get In Touch button from amicusservices-landing.html

--- a/amicusservices-landing.html
+++ b/amicusservices-landing.html
@@ -388,7 +388,7 @@
             <p>Whether you're a traveler looking for eco-friendly stays or a business aiming to reduce your environmental impact, AmicuServices is here to help.</p>
             <div>
                 <a href="sustainable-hotel-search.html" class="btn btn-light btn-lg mr-3">Explore Destinations</a>
-                <a href="index.html#contact-section" class="btn btn-white btn-lg">Get in Touch</a>
+                <!-- Get in Touch button removed -->
             </div>
         </div>
     </section>
