Remove grey Contact button from index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		            <p>Travelers can explore and book hotels that prioritize energy efficiency, lower emissions, and responsible practices. Hosts can generate clear carbon footprint snapshots that highlight where emissions come from and where improvements make the biggest impact.</p>
 		            <p>Whether you're choosing a stay or managing one, AmicuServices helps turn sustainability into informed action.</p>
 
-		            <p><a href="amicustravel-landing.html" class="btn btn-primary py-3 px-4">Explore Stays</a> <a href="lca-calculator.html" class="btn btn-white py-3 px-4">Explore C02</a> <a href="#contact-section" class="btn btn-secondary py-3 px-4">Contact</a></p>
+		            <p><a href="amicustravel-landing.html" class="btn btn-primary py-3 px-4">Explore Stays</a> <a href="lca-calculator.html" class="btn btn-white py-3 px-4">Explore C02</a></p>
 		          </div>
 		        </div>
 		        </div>
