Update Discover button links to sustainable-hotel-search.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			            <h1 class="mb-4 mt-3">Explore Your Travel Destinations like never before</h1>
 			            <p>We help you search for travel destinations that are verified carbon friendly businesses.</p>
 			            
-			            <p><a href="amicustravel-landing.html" class="btn btn-primary px-5 py-3 mt-3">Discover <span class="ion-ios-arrow-forward"></span></a></p>
+						<p><a href="sustainable-hotel-search.html" class="btn btn-primary px-5 py-3 mt-3">Discover <span class="ion-ios-arrow-forward"></span></a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -90,7 +90,7 @@
 		          		<span class="subheading pl-5">Discover Africa</span>
 						<h1 class="mb-4 mt-3">Never Stop Exploring</h1>
 						<p>Relax at hotels with sustainable amenities while supporting lower carbon choices around the world.</p>
-			            <p><a href="amicustravel-landing.html" class="btn btn-primary px-5 py-3 mt-3">Discover<span class="ion-ios-arrow-forward"></span></a></p>
+						<p><a href="sustainable-hotel-search.html" class="btn btn-primary px-5 py-3 mt-3">Discover<span class="ion-ios-arrow-forward"></span></a></p>
 		            </div>
 		          </div>
 	        	</div>
