Update airport section images and content, navbar consistency, and airport branding

--- a/amicusservices-landing.html
+++ b/amicusservices-landing.html
@@ -274,7 +274,7 @@
                         <li class="nav-item"><a href="index.html#destination-section" class="nav-link"><span>Destination</span></a></li>
                         <li class="nav-item"><a href="index.html#hotel-section" class="nav-link"><span>Hotels+Resorts+Villas</span></a></li>
                         <li class="nav-item"><a href="index.html#beauty-wellness-section" class="nav-link"><span>Beauty+Wellness</span></a></li>
-                        <li class="nav-item"><a href="index.html#restaurant-section" class="nav-link"><span>Sip+Sizzle</span></a></li>
+                        <li class="nav-item"><a href="index.html#restaurant-section" class="nav-link"><span>AmicusAirports</span></a></li>
                     </ul>
                 </div>
             </div>
