--- a/amicustravel-landing.html
+++ b/amicustravel-landing.html
@@ -44,7 +44,7 @@
 	            <li class="nav-item"><a href="index.html#destination-section" class="nav-link"><span>Destination</span></a></li>
 	            <li class="nav-item"><a href="index.html#hotel-section" class="nav-link"><span>Hotels+Resorts+Villas</span></a></li>
 	            <li class="nav-item"><a href="index.html#beauty-wellness-section" class="nav-link"><span>Beauty+Wellness</span></a></li>
-	            <li class="nav-item"><a href="index.html#restaurant-section" class="nav-link"><span>Sip+Sizzle</span></a></li>
+                <li class="nav-item"><a href="index.html#airport-section" class="nav-link"><span>AmicusAirports</span></a></li>
 	          </ul>
 	        </div>
 	      </div>
@@ -58,43 +58,42 @@
 
                     <div class="ftco-services-2">
                         <div class="services mb-4 text-center">
-                            <h2 class="mb-3" style="font-size: 2.5rem;">Sustainable Travel Choices Made Simple</h2>
-                            <p>Whether you're planning a weekend getaway or a multi-country adventure, we help you travel smarter and greener. AmicusTravel makes sustainable travel simple. Discover eco-friendly accommodations, and make informed choices that align with your values.</p>
+                            <h2 class="mb-3" style="font-size: 2.5rem;">Sustainable Airport Experiences Made Simple</h2>
+                            <p>Discover how AmicusAirports is transforming the airport experience for eco-conscious travelers. From green terminals to carbon offset options for your flights, we help you make every journey more sustainable—starting at the airport.</p>
                             <div class="text-center mt-4 mb-5">
-                                <a href="sustainable-hotel-search.html" class="btn btn-primary btn-lg">Explore Destinations</a>
+                                <a href="amicusairports-landing.html" class="btn btn-primary btn-lg">Explore Airports</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-lg-4">
                                 <div class="services mb-4">
-                                    <h4 class="heading mb-2">Our Features:</h4>
+                                    <h4 class="heading mb-2">Green Airport Facilities</h4>
                                     <ul class="list-unstyled">
-                                        <li class="mb-2">✓ Eco-friendly hotel recommendations</li>
-                                        <li class="mb-2">✓ LEED-certified accommodation finder</li>
-                                        <li class="mb-2">✓ Carbon footprint calculator for trips</li>
-                                        <li class="mb-2">✓ Sustainability ratings for hotels</li>
-                                        <li class="mb-2">✓ Green travel tips and insights</li>
-                                        <li class="mb-2">✓ Personalized travel preferences</li>
+                                        <li class="mb-2">✓ LEED-certified terminals</li>
+                                        <li class="mb-2">✓ Renewable energy usage</li>
+                                        <li class="mb-2">✓ Waste reduction and recycling programs</li>
+                                        <li class="mb-2">✓ Water conservation initiatives</li>
+                                        <li class="mb-2">✓ Electric vehicle charging stations</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="services mb-4">
-                                    <h4 class="heading mb-2">Why Travel with AmicusTravel?</h4>
+                                    <h4 class="heading mb-2">Flight Carbon Offsetting</h4>
                                     <ul class="list-unstyled">
-                                        <li class="mb-2">✓ Discover truly sustainable accommodations</li>
-                                        <li class="mb-2">✓ Understand your travel's environmental impact</li>
-                                        <li class="mb-2">✓ Support hotels committed to sustainability</li>
-                                        <li class="mb-2">✓ Easy-to-use platform and mobile app</li>
-                                        <li class="mb-2">✓ Expert eco-travel recommendations</li>
+                                        <li class="mb-2">✓ Calculate your flight's carbon footprint</li>
+                                        <li class="mb-2">✓ Offset emissions directly at the airport</li>
+                                        <li class="mb-2">✓ Support global reforestation projects</li>
+                                        <li class="mb-2">✓ Transparent offset tracking</li>
+                                        <li class="mb-2">✓ Partnered with leading sustainability organizations</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="services mb-4">
-                                    <h4 class="heading mb-2">Traveler-Focused Features:</h4>
-                                    <p>Compare hotels by their sustainability certifications, view real carbon footprint data, read reviews from other eco-conscious travelers, and get personalized recommendations based on your travel style and values. Every booking through AmicusTravel supports hotels that are genuinely committed to the planet.</p>
+                                    <h4 class="heading mb-2">Traveler Airport Amenities</h4>
+                                    <p>Enjoy healthy dining, green lounges, and wellness spaces. Access real-time updates on airport sustainability efforts, and find tips for reducing your environmental impact while traveling. AmicusAirports connects you to the best eco-friendly amenities every step of your journey.</p>
                                 </div>
                             </div>
                         </div>
