--- a/amicustransport-landing.html
+++ b/amicustransport-landing.html
@@ -126,7 +126,7 @@
                         <li class="nav-item"><a href="index.html#services-section" class="nav-link"><span>Services</span></a></li>
                         <li class="nav-item"><a href="index.html#destination-section" class="nav-link"><span>Destination</span></a></li>
                         <li class="nav-item"><a href="index.html#hotel-section" class="nav-link"><span>Hotels+Resorts+Villas</span></a></li>
-                        <li class="nav-item"><a href="index.html#restaurant-section" class="nav-link"><span>Sip+Sizzle</span></a></li>
+                        <li class="nav-item"><a href="index.html#restaurant-section" class="nav-link"><span>AmicusAirports</span></a></li>
                     </ul>
                 </div>
             </div>
