--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	            <li class="nav-item"><a href="#destination-section" class="nav-link"><span>Destination</span></a></li>
 	            <li class="nav-item"><a href="#hotel-section" class="nav-link"><span>Hotels+Resorts+Villas</span></a></li>
 	            <li class="nav-item"><a href="#beauty-wellness-section" class="nav-link"><span>Beauty+Wellness</span></a></li>
-	            <li class="nav-item"><a href="#restaurant-section" class="nav-link"><span>Sip+Sizzle</span></a></li>
+				<li class="nav-item"><a href="#restaurant-section" class="nav-link"><span>AmicusAirports</span></a></li>
 	          </ul>
 	        </div>
 	      </div>
@@ -602,94 +602,94 @@
     </section>
 
     <section class="ftco-section" id="restaurant-section">
-    	<div class="container">
-    		<div class="row justify-content-center pb-3">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-          	<span class="subheading">Restaurant</span>
-            <h2 class="mb-4">Near Resturant</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
+		<div class="container">
+			<div class="row justify-content-center pb-3">
+					<div class="col-md-12 heading-section text-center ftco-animate">
+						<span class="subheading">Airports</span>
+						<h2 class="mb-4">Nearby Sustainable Airports</h2>
+						<p>Find and explore eco-friendly airports with green terminals, carbon offset programs, and traveler-focused amenities for a better journey.</p>
+					</div>
+				</div>
     		<div class="row">
     			<div class="col-md-6 col-lg-4 ftco-animate">
     				<div class="project">
     					<div class="img">
-		    				<img src="images/resto-1.jpg" class="img-fluid" alt="Colorlib Template">
-	    				</div>
-	    				<div class="text">
-	    					<h4 class="price"><span class="mr-2">menu start at</span>$4.00</h4>
-	    					<span>Bern, Swetzerland</span>
-	    					<h3><a href="sustainable-restaurant-search.html">Resto Bar, Swetzerland</a></h3>
-	    					<div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-	    						<div class="float-right">
-	    							<span class="rate"><a href="#">(120)</a></span>
-	    						</div>
-	    					</div>
-	    				</div>
-	    				<a href="images/resto-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
+    						<img src="images/airport-1.jpg" class="img-fluid" alt="Zurich International Airport">
+    					</div>
+    					<div class="text">
+    						<h4 class="price"><span class="mr-2">carbon offset available</span></h4>
+    						<span>Zurich Airport, Switzerland</span>
+    						<h3><a href="amicusairports-landing.html">Zurich International Airport</a></h3>
+    						<div class="star d-flex clearfix">
+    							<div class="mr-auto float-left">
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    							</div>
+    							<div class="float-right">
+    								<span class="rate"><a href="#">(320)</a></span>
+    							</div>
+    						</div>
+    					</div>
+    					<a href="images/airport-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+    						<span class="icon-expand"></span>
+    					</a>
     				</div>
     			</div>
     			<div class="col-md-6 col-lg-4 ftco-animate">
     				<div class="project">
     					<div class="img">
-		    				<img src="images/resto-2.jpg" class="img-fluid" alt="Colorlib Template">
-	    				</div>
-	    				<div class="text">
-	    					<h4 class="price"><span class="mr-2">menu start at</span>$4.00</h4>
-	    					<span>Bern, Swetzerland</span>
-	    					<h3><a href="sustainable-restaurant-search.html">Resto Bar, Swetzerland</a></h3>
-	    					<div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-	    						<div class="float-right">
-	    							<span class="rate"><a href="#">(120)</a></span>
-	    						</div>
-	    					</div>
-	    				</div>
-	    				<a href="images/resto-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
+    						<img src="images/airport-2.jpg" class="img-fluid" alt="Munich International Airport">
+    					</div>
+    					<div class="text">
+    						<h4 class="price"><span class="mr-2">solar powered terminal</span></h4>
+    						<span>Munich Airport, Germany</span>
+    						<h3><a href="amicusairports-landing.html">Munich International Airport</a></h3>
+    						<div class="star d-flex clearfix">
+    							<div class="mr-auto float-left">
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    							</div>
+    							<div class="float-right">
+    								<span class="rate"><a href="#">(210)</a></span>
+    							</div>
+    						</div>
+    					</div>
+    					<a href="images/airport-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+    						<span class="icon-expand"></span>
+    					</a>
     				</div>
     			</div>
     			<div class="col-md-6 col-lg-4 ftco-animate">
     				<div class="project">
     					<div class="img">
-		    				<img src="images/resto-3.jpg" class="img-fluid" alt="Colorlib Template">
-	    				</div>
-	    				<div class="text">
-	    					<h4 class="price"><span class="mr-2">menu start at</span>$4.00</h4>
-	    					<span>Bern, Swetzerland</span>
-	    					<h3><a href="sustainable-restaurant-search.html">Resto Bar, Swetzerland</a></h3>
-	    					<div class="star d-flex clearfix">
-	    						<div class="mr-auto float-left">
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-		    						<span class="ion-ios-star"></span>
-	    						</div>
-	    						<div class="float-right">
-	    							<span class="rate"><a href="#">(120)</a></span>
-	    						</div>
-	    					</div>
-	    				</div>
-	    				<a href="images/resto-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-	    					<span class="icon-expand"></span>
-	    				</a>
+    						<img src="images/airport-3.jpg" class="img-fluid" alt="Schiphol International Airport">
+    					</div>
+    					<div class="text">
+    						<h4 class="price"><span class="mr-2">EV charging & green lounges</span></h4>
+    						<span>Amsterdam Schiphol, Netherlands</span>
+    						<h3><a href="amicusairports-landing.html">Schiphol International Airport</a></h3>
+    						<div class="star d-flex clearfix">
+    							<div class="mr-auto float-left">
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    								<span class="ion-ios-star"></span>
+    							</div>
+    							<div class="float-right">
+    								<span class="rate"><a href="#">(185)</a></span>
+    							</div>
+    						</div>
+    					</div>
+    					<a href="images/airport-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+    						<span class="icon-expand"></span>
+    					</a>
     				</div>
     			</div>
     		</div>
